# CameraSimulator

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conanfile.txt
app/: CMakeLists.txt  main.cpp
app/cli/: CMakeLists.txt  main_cli.cpp
include/: CFAPattern.h  ISP.h  ImageSensor.h  SceneGenerator.h
include/ImageSensor/: ImageSensor.h
src/: CFAPattern.cpp  CMakeLists.txt  ISP.cpp  ImageSensor.cpp  SceneGenerator.cpp
